Removed reload script

--- a/index.html
+++ b/index.html
@@ -176,15 +176,10 @@
             min-height: 90vh;
         }
     </style>
-    <script>
-        setTimeout(function() {
-            location.reload()
-        }, 3000);
-    </script>
     <div id="main">
         <h1 class="tab blink">Ciao sono Silvia Santus!</h1>
         <h2 class="tab">Vengo dalla Sardegna e mi piace la pizza</h2>
-        <img src="https://media.tenor.com/y_note3i3ukAAAAC/italy-sardinia.gif" />
+        <img src="https://m~edia.tenor.com/y_note3i3ukAAAAC/italy-sardinia.gif" />
         <br />
         <br />
         <br />
