--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
     <footer id="footer">
         <img src="https://i.imgur.com/i6hvJjx.gif">
-        <p>Questo è un link al mio portfolio <a href="https://it.wikipedia.org/wiki/Frattura_del_pene">portfolio</a></p>
+        <p>Questo è un link al mio <a href="https://it.wikipedia.org/wiki/Frattura_del_pene">portfolio</a></p>
         <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
     </footer>
 </body>
