--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div id="main">
         <h1 class="tab blink">Ciao sono Silvia Santus!</h1>
         <h2 class="tab">Vengo dalla Sardegna e mi piace la pizza</h2>
-        <img src="https://m~edia.tenor.com/y_note3i3ukAAAAC/italy-sardinia.gif" />
+        <img src="https://media.tenor.com/y_note3i3ukAAAAC/italy-sardinia.gif" />
         <br />
         <br />
         <br />
