--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <head>
 </head>
+<script type="module">
+    import { rainbowCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
+  
+    new rainbowCursor();
+  </script>
 
 <body class="center bg2 max">
     <style>
@@ -9,8 +14,8 @@
             font-family: "Comic Sans MS", sans-serif;
             line-height: 1.4;
             margin: 0 auto;
-            max-width: 860px;
             height: 100%;
+            cursor: url(https://cdn.custom-cursor.com/db/cursor/32/Pepperoni_Pizza_Cursor.png) , default !important
         }
 
         .center {
